fixed alignment issue

--- a/css/linkedinInject.css
+++ b/css/linkedinInject.css
@@ -71,7 +71,6 @@ div.claimEvents_d{
 	z-index:1;
 	height: 20px;
     width: 20px;
-	top:-55px;
 	left:-570px;
 }
 
@@ -80,7 +79,6 @@ img.claimEvents{
 	z-index:1;
 	height: 20px;
     width: 20px;
-	top:-55px;
 	left:-570px;
 }
 
